[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebayes"
version = "3.0.0"
description = "A memory-based, optional-persistence naïve bayesian text classifier."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ryan Vennell", email = "ryan.vennell@gmail.com"}
]
keywords = ["bayes", "classifier", "naive", "text", "spam"]
dependencies = [
    "fastapi>=0.116.1",
    "snowballstemmer>=3.0.1",
    "uvicorn[standard]>=0.35.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
simplebayes-server = "simplebayes.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["simplebayes"]
branch = false

[tool.coverage.report]
fail_under = 100
show_missing = true
