[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebayes"
version = "3.0.0"
description = "A memory-based, optional-persistence naïve bayesian text classifier."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Ryan Vennell", email = "ryan.vennell@gmail.com"}
]
keywords = ["bayes", "classifier", "naive", "text", "spam"]
dependencies = [
    "fastapi>=0.116.1",
    "snowballstemmer>=3.0.1",
    "uvicorn[standard]>=0.35.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
simplebayes-server = "simplebayes.cli:run"

[project.urls]
Homepage = "https://github.com/hickeroar/simplebayes"
Repository = "https://github.com/hickeroar/simplebayes"
Issues = "https://github.com/hickeroar/simplebayes/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["simplebayes"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.setuptools.packages.find]
include = ["simplebayes", "simplebayes.*"]

[tool.setuptools.package-data]
simplebayes = ["py.typed"]
